sturctured out two pages still have one more to go

--- a/index.html
+++ b/index.html
@@ -5,9 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home page</title>
     <link rel="stylesheet" href="stylesheet.css" />
+    <nav>
+      <a href="grade-calculator.html">Grade Calculator</a>
+      <a href="semester-calculator.html">Semester Calculator</a>
+    </nav>
   </head>
   <body>
     <h1>Welcome to your Grade Calculator</h1>
+
+    <h2>What would you like to do?</h2>
     <script href="script.js"></script>
+    <div id="parent-div">
+      <div class="child" id="grade-calculator">
+        <img src="temp.jpeg" />
+      </div>
+
+      <div class="child" id="semester-calculator">
+        <img src="temp.jpeg" />
+      </div>
+    </div>
   </body>
 </html>
