did semester, need to add functionality

--- a/grade-calculator.html
+++ b/grade-calculator.html
@@ -11,7 +11,49 @@
     </nav>
   </head>
   <body>
-    <form></form>
+    <form>
+      <!--Attendance-->
+      <div>
+        <label>
+          <input
+            name="attendance"
+            type="number"
+            placeholder="Attendance"
+            required
+          />
+        </label>
+      </div>
+
+      <!--Homework-->
+      <div>
+        <label>
+          <input
+            type="number"
+            name="homework"
+            placeholder="HomeWork"
+            required
+          />
+        </label>
+      </div>
+
+      <!--Projects-->
+      <div>
+        <label>
+          <input type="number" name="project" placeholder="Project" required />
+        </label>
+      </div>
+
+      <!--Test-->
+      <div>
+        <label>
+          <input type="number" name="test" placeholder="Test" required />
+        </label>
+      </div>
+
+      <div>
+        <input type="submit" />
+      </div>
+    </form>
     <footer>
       <nav>
         <a href="index.html">Home</a>
