--- a/semester-calculator.html
+++ b/semester-calculator.html
@@ -3,7 +3,70 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="/stylesheet.css" />
+    <title>Semester Calculator</title>
+    <nav>
+      <a href="/index.html">Home</a>
+      <a href="/grade-calculator.html">Grade Calculator</a>
+    </nav>
   </head>
-  <body></body>
+  <body>
+    <form>
+      <table>
+        <tr>
+          <th>
+            <label>Classes</label>
+          </th>
+          <th>
+            <label>Grade</label>
+          </th>
+          <th><label>Credits</label></th>
+        </tr>
+        <!--Class 1-->
+        <div>
+          <tr>
+            <td>
+              <label>
+                <input type="text" name="class1" placeholder="Class 1" />
+              </label>
+            </td>
+            <td>
+              <label>
+                <input type="text" name="grade" placeholder="A" />
+              </label>
+            </td>
+            <td>
+              <label>
+                <input type="number" name="credits" placeholder="3" />
+              </label>
+            </td>
+          </tr>
+        </div>
+
+        <!--Class 2-->
+        <div>
+          <tr>
+            <td>
+              <label>
+                <input type="text" name="class2" placeholder="Class 2" />
+              </label>
+            </td>
+            <td>
+              <label>
+                <input type="text" name="grade" placeholder="A" />
+              </label>
+            </td>
+            <td>
+              <label>
+                <input type="number" name="credits" placeholder="3" />
+              </label>
+            </td>
+          </tr>
+        </div>
+      </table>
+      <!--Add more/Submit -->
+      <div><button id="add">Add</button><input type="submit" /></div>
+    </form>
+    <script href="/script.js"></script>
+  </body>
 </html>
