--- a/grade-calculator.html
+++ b/grade-calculator.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="stylesheet.css" />
+    <link rel="stylesheet" href="grade.css" />
     <title>Grade Calculator</title>
     <nav>
       <a href="index.html">Home</a>
@@ -12,6 +12,28 @@
   </head>
   <body>
     <form>
+      <table>
+        <tr>
+          <th>Assignment<br />(optional)</th>
+          <th>Weight</th>
+          <th>Grade</th>
+        </tr>
+        <tr>
+          <td>
+            <div>
+              <label>
+                <input
+                  type="number"
+                  name="homework"
+                  placeholder="HomeWork"
+                  required
+                />
+              </label>
+            </div>
+          </td>
+          <td>test</td>
+        </tr>
+      </table>
       <!--Attendance-->
       <div>
         <label>
